grammar.txt
PROGRAM ::= OPTFUNCS OPTDIFFARG OPTEXPRS

OPTFUNCS ::= EMPTY | FUNCS

OPTDIFFARG ::= EMPTY | DIFFARG

OPTEXPRS ::= EMPTY | EXPRS

FUNCS ::= FUNC FUNCS | FUNC

FUNC ::= def id '(' id ')' '{' EXPR '}' 

DIFFARG ::= '{' diffby id '}'

EXPRS ::= '{' EXPR '}' EXPRS | EXPR

EXPR ::=   EXPR + EXPR
         | EXPR - EXPR
         
         | EXPR * EXPR
         | EXPR / EXPR
         
         | EXPR ^ EXPR

         | - EXPR
         | + EXPR

         | sin  EXPR
         | cos  EXPR
         | tan  EXPR
         | exp  EXPR
         | ln   EXPR
         | log  EXPR
         | sqrt EXPR

         | id EXPR
         
         | '(' EXPR ')'
         
         | number
         | id
